--- a/i3config/i3blocks.conf
+++ b/i3config/i3blocks.conf
@@ -40,35 +40,36 @@
 separator=false
 markup=pango
 
+#[Weather]
+#command=~/.config/i3/scripts/openweather
+# or:
+#command=~/.config/i3/scripts/openweather-city
+#interval=1800
+#color=#7275b3
+
 [terminal]
 full_text= 
 color=#807dfe
-command=xfce4-terminal
+command=i3-msg -q exec xfce4-terminal
 
 [browser]
 full_text= 
 color=#ff7f81
-command=firefox
+command=i3-msg -q exec firefox
 
 [files]
 full_text= 
 color=#7f3fbf
-command=thunar ~/
+command=i3-msg -q exec thunar ~/
 
-[mail]
-full_text= 
-color=#dbcb75
-command=thunderbird
+#[mail]
+#full_text= 
+#color=#dbcb75
+#command=i3-msg -q exec thunderbird
 
 [simple-2]
-full_text=
+full_text=: :
 color=#717171
-command=discord
-
-[simple-3]
-full_text=
-color=#b80000
-command=onboard
 
 # Disk usage
 #
@@ -102,31 +103,26 @@ interval=30
 #T_WARN=70
 #T_CRIT=90
 #SENSOR_CHIP=""
-# where SENSOR_CHIP can be find with sesnors output
+# where SENSOR_CHIP can be find with sensors output
 # can be used also for GPU temperature or other temperature sensors lm-sensors detects.
 
 # showing name of connected network (enable for wifi use)
-[net]
-label=
-command=echo "$(LANG=C nmcli d | grep connected  | awk '{print $4}')"
-interval=30
+#[net]
+#label=
+#command=echo "$(LANG=C nmcli d | grep connected  | awk '{print $4}')"
+#interval=30
 
 [bandwidth]
 command=~/.config/i3/scripts/bandwidth2
 interval=persist
-color=#00eef1
 
 # Battery indicator
-#
-# The battery instance defaults to 0.
 [battery]
-command=~/.config/i3/scripts/battery-pinebook-pro.sh
-#command=~/.config/i3/scripts/battery.sh
-# change this to battery-pinebook-pro.sh if you are running on pinebook-pro
+command=~/.config/i3/scripts/battery2
+# for alternative battery script  change to battery1
+# change this to battery-pinebook-pro if you are running on pinebook-pro
 label=
-instance=0
 interval=30
-color=#00ff5d
 
 [simple-2]
 full_text=: :
@@ -141,16 +137,32 @@ command=~/.config/i3/scripts/volume
 instance=Master
 interval=1
 
-[xbacklight]
-command=xbacklight
-
+# display keyboard layout name
+# for keyboard layouts switcher
+# see i3 config file
+# this needs xkblayout-state installed from the AUR:
+# https://aur.archlinux.org/packages/xkblayout-state-git
+#[keyboard-layout]
+#command=~/.config/i3/scripts/keyboard-layout
+#interval=2
 
 [keybindings]
 full_text=
-command=~/.config/i3/scripts/keyhint.sh
+command=~/.config/i3/scripts/keyhint
+
+#set power-profile
+[ppd_menu]
+full_text=
+command=~/.config/i3/scripts/power-profiles
+color=#407437
+
+#Show the current power-profile
+[ppd-status]
+command=~/.config/i3/scripts/ppd-status
+interval=5
 
 [time]
-label=
+#label=
 command=date '+%a %d %b %H:%M:%S'
 interval=1
 
